--- a/Task management/Areas/Admin/Views/Purchase/MyPurchase.cshtml
+++ b/Task management/Areas/Admin/Views/Purchase/MyPurchase.cshtml
@@ -1687,7 +1687,7 @@
                                                     "freeQuantity": parseInt(freeQuantity),
                                                     "allQuantity": parseInt(totalQty),
                                                     "singleDiscount": parseFloat(discount),
-                                                    "purchasePrice": parseFloat(price),
+                                                    "purchasePrice": parseInt(price),
                                                     "idWarehouse": parseFloat(wareHouseId),
                                                     "total": parseFloat(totalPrc),
                                                     "shipping": parseFloat(OrderTotalShipping),
