--- a/Task management/Areas/Admin/Views/Purchase/MyPurchase.cshtml
+++ b/Task management/Areas/Admin/Views/Purchase/MyPurchase.cshtml
@@ -1687,8 +1687,8 @@
                                                     "freeQuantity": parseInt(freeQuantity),
                                                     "allQuantity": parseInt(totalQty),
                                                     "singleDiscount": parseFloat(discount),
-                                                    "purchasePrice": parseInt(price),
-                                                    "idWarehouse": parseFloat(wareHouseId),
+                                                    "purchasePrice": parseFloat(price),
+                                                    "idWarehouse": parseInt(wareHouseId),
                                                     "total": parseFloat(totalPrc),
                                                     "shipping": parseFloat(OrderTotalShipping),
                                                     "nouts": PurcheasNotes,
