--- a/Task management/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Task management/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -484,8 +484,11 @@
 							<h6 class="submenu-hdr">المحاسبة</h6>
 							<ul>
 								<li class="submenu">
-									<a href="javascript:void(0);"><i data-feather="file-text"></i><span>المصاريف</span><span class="menu-arrow"></span></a>
+									<a href="javascript:void(0);"><i data-feather="file-text"></i><span>السندات</span><span class="menu-arrow"></span></a>
 									<ul>
+
+										<li><a asp-area="Admin" asp-controller="BondType" asp-action="MyBondType">@ResourceWeb.LBMyBondType</a></li>
+
 										<li><a asp-area="Admin" asp-controller="Expense" asp-action="MyExpense">@ResourceWeb.LBMyExpense</a></li>
 										<li><a asp-area="Admin" asp-controller="ExpenseCategory" asp-action="MyExpenseCategory">@ResourceWeb.LBMyExpenseCategory</a></li>
 									</ul>
