--- a/Task management/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Task management/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -420,6 +420,7 @@
 								<li><a asp-area="Admin" asp-controller="Product" asp-action="MYProduct"><i data-feather="box"></i><span>المنتجات </span></a></li>
 								<li><a asp-area="Admin" asp-controller="PhotoAddProdact" asp-action="MYPhotoAddProdact"><i data-feather="box"></i><span>@ResourceWeb.LBMYPhotoAddProdact </span></a></li>
 								<li><a asp-area="Admin" asp-controller="ClassCard" asp-action="MYClassCard"><i data-feather="plus-square"></i><span>@ResourceWeb.LBMYClassCard</span></a></li>
+								<li><a asp-area="Admin" asp-controller="Stock" asp-action="MyStock"><i data-feather="plus-square"></i><span>@ResourceWeb.LBMyStock</span></a></li>
 							
 				@* 				<li><a href="expired-products.html"><i data-feather="codesandbox"></i><span>Expired Products</span></a></li>
 								<li><a href="low-stocks.html"><i data-feather="trending-down"></i><span>Low Stocks</span></a></li> *@
@@ -1450,6 +1451,8 @@
 							<li><a asp-area="Admin" asp-controller="PhotoAddProdact" asp-action="MYPhotoAddProdact"><i data-feather="box"></i><span>@ResourceWeb.LBMYPhotoAddProdact </span></a></li>
 
 							<li><a asp-area="Admin" asp-controller="ClassCard" asp-action="MYClassCard"><i data-feather="plus-square"></i><span>@ResourceWeb.LBMYClassCard</span></a></li>
+							<li><a asp-area="Admin" asp-controller="Stock" asp-action="MyStock"><i data-feather="plus-square"></i><span>@ResourceWeb.LBMyStock</span></a></li>
+
 							<li><a href="expired-products.html"><span>Expired Products</span></a></li>
 							<li><a href="low-stocks.html"><span>Low Stocks</span></a></li>
 							<li><a asp-area="Admin" asp-controller="Category" asp-action="MYCategory"><span>الفئات</span></a></li>
