--- a/Task management/Areas/Admin/Views/POS/MyPOS.cshtml
+++ b/Task management/Areas/Admin/Views/POS/MyPOS.cshtml
@@ -1928,8 +1928,8 @@
                                 "accountingName": NameCustomerCategoryy,
                                 "bondType": "فاتورة مبيعات",
                                 "bondNumber": invoieNumberr,
-                                "debtor": 0,
-                                "creditor": totalCredit,
+                                "debtor": totalCredit,
+                                "creditor": 0,
                                 "statement": `فاتورة مبيعات رقم ${invoieNumberr} من ${NameCustomerCategoryy} ${PaymentMethodd2}`,
                                 "nouts": `فاتورة مبيعات رقم ${invoieNumberr} من ${NameCustomerCategoryy} ${PaymentMethodd2}`,
                                 "dataEntry": UserIdentity,
