--- a/Task management/Views/CheckOut/MYCheckOut.cshtml
+++ b/Task management/Views/CheckOut/MYCheckOut.cshtml
@@ -552,7 +552,7 @@
                 var accountingRest = {
                     "idaccountingRestrictions": 0,
                     "numberaccountingRestrictions": nomberAccMax,
-                    "accountingName": "نقطة مبيعات",
+                    "accountingName": userNm,
                     "bondType": "فاتورة مبيعات",
                     "bondNumber": invoiceNumber,
                     "debtor": totalDebtor,
